<resources>
    <string name="app_name">myDemoApp</string>
    <string name="roll">Roll</string>
    <string name="collections">Collections</string>
    <string name="premium">Buy Premium</string>
    <string name="logout">Logout</string>
    <string name="add_user">Sign up</string>
    <string name="back">Back</string>
    <string name="enter_username">Enter username</string>
    <string name="all_animals_are_equal_but_some_animals_are_more_equal_than_others">All animals are equal, but some animals are more equal than others</string>
    <string name="enter_password">Enter password</string>
    <string name="createaccount">createAccount</string>
    <string name="login">Login</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="admin_login">Admin Login</string>
    <string name="premuim_login">Premuim login</string>
    <string name="four_legs_good_two_legs_better">Four legs good, two legs better!
    !</string>
    <string name="preference_file_key">cst338PreferenceFileNameGacha</string>
    <string name="preference_userId_key">cst338PreferenceUserIdKeyGacha</string>
    <string name="cat_gacha_title">Cat Gacha!</string>
    <string name="sign_up">Sign-up</string>
</resources>